--- a/include/open62541/config.h.in
+++ b/include/open62541/config.h.in
@@ -27,6 +27,7 @@
 #cmakedefine UA_ENABLE_NODEMANAGEMENT
 #cmakedefine UA_ENABLE_SUBSCRIPTIONS
 #cmakedefine UA_ENABLE_PUBSUB
+#cmakedefine UA_ENABLE_PUBSUB_CONFIG
 #cmakedefine UA_ENABLE_PUBSUB_ETH_UADP
 #cmakedefine UA_ENABLE_PUBSUB_ETH_UADP_ETF
 #cmakedefine UA_ENABLE_PUBSUB_ETH_UADP_XDP
