feat(pubsub): add getState method
Added getState method for following PubSub components:
* Reader- and WriterGroup
* DataSetReader- and DataSetWriter

Note: there should probably be a getState method for the connection as
well, but the connection structure does not provide a state variable yet

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -350,6 +350,9 @@ if(UA_ENABLE_PUBSUB)
     add_executable(check_pubsub_publish_uadp pubsub/check_pubsub_publish_uadp.c $<TARGET_OBJECTS:open62541-object> $<TARGET_OBJECTS:open62541-plugins>)
     target_link_libraries(check_pubsub_publish_uadp ${LIBS})
     add_test_valgrind(pubsub_publish ${TESTS_BINARY_DIR}/check_pubsub_publish_uadp)
+    add_executable(check_pubsub_get_state pubsub/check_pubsub_get_state.c $<TARGET_OBJECTS:open62541-object> $<TARGET_OBJECTS:open62541-plugins>)
+    target_link_libraries(check_pubsub_get_state ${LIBS})
+    add_test_valgrind(check_pubsub_get_state ${TESTS_BINARY_DIR}/check_pubsub_get_state)
 
     #Link libraries for executing subscriber unit test
     add_executable(check_pubsub_subscribe pubsub/check_pubsub_subscribe.c $<TARGET_OBJECTS:open62541-object> $<TARGET_OBJECTS:open62541-plugins>)
